--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 :root{
-    --main-color: #4A707A;
+    --main-color: #425664;
     --color-dark: #1D2231;
     --text-grey: #8390A2;
 }
